@@ -1,0 +1,187 @@
+<tal:block tal:define="isDiscussionAllowed view/is_discussion_allowed"
+           tal:condition="isDiscussionAllowed"
+           i18n:domain="plone">
+<tal:block define="userHasReplyPermission view/can_reply;
+                   isAnonymousDiscussionAllowed view/anonymous_discussion_allowed;
+                   isAnon view/is_anonymous;
+                   canManage view/can_manage;
+                   replies python:view.get_replies(canManage);
+                   has_replies python:view.has_replies(canManage);
+                   showCommenterImage view/show_commenter_image;
+                   errors options/state/getErrors|nothing;
+                   wtool context/@@plone_tools/workflow;">
+
+    <div class="reply"
+         tal:condition="python:isAnon and not isAnonymousDiscussionAllowed">
+        <form tal:attributes="action view/login_action">
+            <input class="standalone"
+                   style="margin-bottom: 1.25em;"
+                   type="submit"
+                   value="Log in to add comments"
+                   i18n:attributes="value label_login_to_add_comments;"
+                   />
+        </form>
+    </div>
+
+    <div class="discussion"
+         tal:attributes="class python: showCommenterImage and 'discussion showCommenterImage' or 'discussion';"
+         tal:condition="has_replies">
+         
+         <span id="commenting-top-arrow">
+             <span class="toolTipArrow" style="display: block;">&nbsp;</span>
+             <span class="toolTipArrow innerTooltipArrow" style="display: block;">&nbsp;</span>
+         </span>
+         
+        <tal:getreplies repeat="reply_dict replies">
+
+            <div class="comment"
+                 tal:define="reply reply_dict/comment;
+                             depth reply_dict/depth|python:0;
+                             author_home_url python:view.get_commenter_home_url(username=reply.author_username);
+                             has_author_link python:author_home_url and not isAnon;
+                             portrait_url python:view.get_commenter_portrait(reply.author_username);
+                             review_state python:wtool.getInfoFor(reply, 'review_state');"
+                 tal:attributes="class python:'comment replyTreeLevel'+str(depth)+' state-'+str(review_state);
+                                 style string:margin-left: ${depth}em;
+                                 id string:${reply/getId}"
+                 tal:condition="python:canManage or review_state == 'published'">
+
+                <div class="commentImage" tal:condition="showCommenterImage">
+                    <a href="" tal:condition="has_author_link"
+                               tal:attributes="href author_home_url">
+                         <img src="defaultUser.gif"
+                              alt=""
+                              height="100"
+                              tal:attributes="src portrait_url;
+                                              alt reply/Creator" />
+                    </a>
+                    <img src="defaultUser.gif"
+                         alt=""
+                         height="100"
+                         tal:condition="not: has_author_link"
+                         tal:attributes="src portrait_url;
+                                         alt reply/Creator" />
+                </div>
+                
+                <div class="commentWrapper">
+                    
+                    <div class="documentByLine" i18n:domain="plone.app.discussion">
+                        <a href=""
+                           tal:condition="has_author_link"
+                           tal:content="reply/Creator"
+                           tal:attributes="href author_home_url">
+                            Poster Name
+                        </a>
+                        <span tal:condition="not: has_author_link"
+                              tal:replace="reply/Creator" />
+                        <span tal:condition="not: reply/Creator">Anonymous</span>
+                        <!-- <tal:posted i18n:translate="label_says">says:</tal:posted> -->
+                    </div>
+                    
+                    <div class="commentBody">
+                        <span tal:replace="structure python:view.cook(reply.getText())" />
+                    </div>
+                
+                    <div class="commentActions">
+                        
+                        <ul>
+                            <li>
+                                <small class="commentDate" 
+                                     tal:content="python:view.format_time(reply.modification_date)">
+                                     8/23/2001 12:40:44 PM
+                                </small>                                
+                            </li>
+                            <li tal:condition="canManage">
+                                <small id="delete-comment">
+                                    <form name="delete"
+                                          action=""
+                                          method="post"
+                                          tal:attributes="action string:${reply/absolute_url}/@@moderate-delete-comment">
+                                        <input name="form.button.DeleteComment"
+                                               class="hiddenStructure"
+                                               type="submit"
+                                               value="Delete"
+                                               i18n:attributes="value label_delete;"
+                                               />
+                                        <a href="" title="Delete" 
+                                           tal:attributes="href string:${reply/absolute_url}/@@moderate-delete-comment"
+                                           i18n:attributes="label_delete; title label_delete">Delete</a>
+                                    </form>
+                                </small>
+                            </li>
+                            <li tal:condition="canManage"
+                                tal:repeat="action reply_dict/actions|nothing">
+                                <small>
+                                    <!-- Workflow actions (e.g. 'publish') -->
+                                    <form name=""
+                                          id="comment-workflow"
+                                          action=""
+                                          method="get"
+                                          tal:attributes="action string:${reply/absolute_url}/@@moderate-publish-comment;
+                                                          name action/id">
+                                        <input type="hidden" name="workflow_action" tal:attributes="value action/id" />
+                                        <input name="form.button.PublishComment"
+                                               class="hiddenStructure"
+                                               type="submit"
+                                               tal:attributes="value action/title"
+                                               i18n:attributes="value"
+                                               />
+                                       <a href=""
+                                          tal:attributes="href string:${reply/absolute_url}/@@moderate-publish-comment"
+                                          tal:content="action/title"
+                                          i18n:translate="">Publish</a>
+                                    </form>
+                               </small>
+                            </li>
+                        </ul>
+                        
+                        <span class="visualClear"><!-- --></span>
+                        
+                    </div>                     
+
+                </div>
+            
+            </div>
+
+        </tal:getreplies>
+    </div>
+
+    <div class="reply"
+         tal:condition="python:isDiscussionAllowed and (isAnon and not isAnonymousDiscussionAllowed)">
+        <form tal:attributes="action view/login_action">
+            <input class="standalone"
+                   style="margin-bottom: 1.25em;"
+                   type="submit"
+                   value="Log in to add comments"
+                   i18n:attributes="value label_login_to_add_comments;"
+                   />
+        </form>
+    </div>
+
+    <div id="commenting" class="reply" tal:condition="python:isDiscussionAllowed and (isAnon and isAnonymousDiscussionAllowed or userHasReplyPermission)">
+        
+        <span id="reply-side-arrow">
+            <span class="toolTipArrow" style="display: block;">&nbsp;</span>
+            <span class="toolTipArrow innerTooltipArrow" style="display: block;">&nbsp;</span>
+        </span>
+
+        <div class="commentImage" tal:define="member context/@@plone_portal_state/member;
+                                              portrait python:context.portal_membership.getPersonalPortrait(member.getId());">
+            <img src="defaultUser.gif"
+                 alt=""
+                 width="100"
+                 tal:condition="portrait"
+                 tal:attributes="src portrait/absolute_url" />
+        </div>
+
+        <fieldset>
+
+            <legend i18n:translate="label_add_comment">Add comment</legend>
+
+            <div tal:replace="structure view/form/render" />
+
+        </fieldset>
+    </div>
+
+</tal:block>
+</tal:block>
