@@ -1224,8 +1224,142 @@ p.tileBody {
 
 /* @group Comments */
 
+#commenting-top-arrow .toolTipArrow {
+	border-bottom-color: #ccc;
+	border-width: 0 15px 15px;
+	margin-top: -15px;
+}
+#commenting-top-arrow .innerTooltipArrow {
+	border-bottom-color: #f7f7f7;
+	margin-top: -14px;
+}
+
+#reply-side-arrow .toolTipArrow {
+	border-color:#ccc;
+	border-top:10px solid transparent;
+	border-bottom:10px solid transparent;
+	border-style:solid solid solid none;
+	border-width:10px 15px 10px 0;
+	margin-top: 2em;
+	left: 118px;
+}
+#reply-side-arrow .innerTooltipArrow {
+	border-bottom-color: transparent;
+	border-right-color: #f7f7f7;
+	margin-left: 1px;
+}
+
 #commenting {
-	margin: 2em 0;
+	margin: 1em 0 3em 1em;	
+}
+#commenting fieldset {
+	padding: 1em;
+	background: #F7F7F7;
+	border: 1px solid #ccc !important;
+	margin-left: 120px !important;
+	
+	border-radius: 5px;		
+	-moz-border-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	-webkit-border-bottom-right-radius: 5px;	
+}
+#commenting legend {
+	display: none;
+}
+#commenting div.field {
+	margin-top: 0;
+}
+#commenting div.field .horizontal {
+	display: none;
+}
+#commenting fieldset .formControls {
+	margin-bottom: 0;
+	text-align: right;
+}
+
+.discussion {
+	background: #f7f7f7;	
+	margin-top: 3em;
+	padding: 0 1em;
+	border: 1px solid #ccc;	
+	
+	border-radius: 5px;		
+	-moz-border-radius: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
+	-webkit-border-bottom-left-radius: 5px;
+	-webkit-border-bottom-right-radius: 5px;	
+}
+.discussion .comment {
+	border-bottom:1px solid #E6E6E6;
+	padding:0;
+}
+.discussion .comment:last-child {
+	border: none;
+}
+
+small.commentDate {
+	display: inline;
+	font-size: 0.76em;
+	line-height: normal;
+}
+.commentImage {
+	width: 100px;
+	height: 100px;
+	margin: 1em 0;
+}
+#commenting .commentImage {
+	margin:0;
+}
+.commentImage img {
+	border: 1px solid #ccc;
+}
+.commentWrapper {
+	margin-left: 105px;
+	position: relative;
+	min-height: 100px;
+	padding-bottom: 1em;
+	padding:1em;	
+}
+/*.discussion .comment:nth-child(odd) .commentWrapper {
+	background: #f7f7f7;
+}*/
+.commentBody {
+	clear: none;
+}
+.discussion .documentByLine {
+	float: none;
+}
+.commentActions {
+	float: none;
+	text-align: right;	
+	position:absolute;
+	bottom: 0.5em;
+	right: 0;
+}
+.commentActions ul,
+.commentActions ul li {
+	list-style: none;
+}
+.commentActions ul {
+	margin-left: 0;
+}
+.commentActions ul li {
+	display: inline;
+}
+.commentActions ul li small {
+	display: inline-block;
+	border-left: 1px solid #ccc;
+	padding: 0 0.5em	
+}
+.commentActions ul li:nth-child(1) small {
+	padding-left: 0;
+	border-left: none;
+}
+.commentActions ul li small a {
+	display: block;
 }
 
 /* @end */
